--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -3,6 +3,7 @@
   "configurations": {
     "home-page": {
       "appLocation": ".",
+      "apiLocation": "./api",
       "outputLocation": "build",
       "appBuildCommand": "npm run build",
       "run": "npm run start-dev",
