--- a/package.json
+++ b/package.json
@@ -17,20 +17,17 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
-    "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start-dev": "webpack serve --mode=development",
+    "start-dev": "webpack-dev-server --mode=development",
     "start": "swa start",
     "build": "webpack --mode=production",
-    "test": "react-scripts test",
     "lint": "eslint src/",
     "lint:fix": "eslint src/ --fix"
   },
   "devDependencies": {
-    "@azure/static-web-apps-cli": "^1.0.6",
+    "@azure/static-web-apps-cli": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "css-loader": "^6.7.3",
@@ -39,11 +36,15 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "object-path": "^0.11.8",
+    "sort-by": "^1.2.0",
+    "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.12.0",
     "webpack-merge": "^5.8.0"
   }
 }
