--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Install modules
+        run: npm ci
       - name: Run ESLint
         run: npm run lint
       - name: Build And Deploy
