--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.11",
     "@vanilla-extract/css": "^1.9.5",
     "axios": "^1.3.4",
+    "axios-retry": "^3.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
