--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,7 +1,7 @@
 {
   "navigationFallback": {
-    "rewrite": "/public/index.html",
-    "exclude": ["/images/*.{png,jpg,gif}", "/css/*"]
+    "rewrite": "index.html",
+    "exclude": ["*.{svg,png,jpg,gif}","*.{css,scss}","*.js"],
   },
   "routes": [
     {
