Adding code splitting to the project

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,7 +1,7 @@
 {
   "navigationFallback": {
     "rewrite": "index.html",
-    "exclude": ["*.{svg,png,jpg,gif}","*.{css,scss}","*.js"],
+    "exclude": ["*.{svg,png,jpg,gif}","*.{css,scss}","*.js"]
   },
   "routes": [
     {
