--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@vanilla-extract/css": "^1.9.5",
+    "@vanilla-extract/css": "^1.10.0",
     "axios": "^1.3.4",
     "axios-retry": "^3.4.0",
     "localforage": "^1.10.0",
@@ -39,6 +39,7 @@
     "@types/jest": "^29.4.2",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
+    "@vanilla-extract/webpack-plugin": "^2.2.0",
     "babel-jest": "^29.5.0",
     "css-loader": "^6.7.3",
     "eslint": "^8.36.0",
@@ -50,8 +51,10 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jsdom": "^21.1.1",
+    "mini-css-extract-plugin": "^2.7.5",
     "object-path": "^0.11.8",
     "react-test-renderer": "^18.2.0",
+    "sass-loader": "^13.2.0",
     "sort-by": "^1.2.0",
     "style-loader": "^3.3.2",
     "ts-jest": "^29.0.5",
