--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jsdom": "^21.1.1",
+    "lodash": "^4.17.21",
     "mini-css-extract-plugin": "^2.7.5",
     "object-path": "^0.11.8",
     "react-test-renderer": "^18.2.0",
