--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/parser": "^5.55.0",
     "@vanilla-extract/webpack-plugin": "^2.2.0",
     "babel-jest": "^29.5.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
